[build-system]
requires = ["setuptools >= 61.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dashipy"
dynamic = ["version", "readme"]
authors = [
  {name = "xcube Development Team"}
]
description = """\
  Backend for server-configured charts.
  """
keywords = [
  "analysis ready data", "data science",
  "datacube", "xarray", "zarr"
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "plotly",
  "pyaml",
  "tornado"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

[project.scripts]
dashipy = "dashipy.demo.server:main"

[tool.setuptools.dynamic]
version = {attr = "dashipy.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
  "test*",
  "doc*"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pytest",
  "pytest-cov",
  "requests-mock",
]

[project.urls]
Source = "https://github.com/bcdev/dashi"
